fix: remove white space on right of screen and centered buttons on about-us page

--- a/src/app/modules/about-us/pages/about-us/about-us.component.css
+++ b/src/app/modules/about-us/pages/about-us/about-us.component.css
@@ -109,30 +109,57 @@ body {
     padding: 2em 2em;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
-.learn-more-button {
-  font-size: calc(0.5vw + 0.5rem);
-  font-weight: 600;
-  padding:  0.5rem 1.2rem;
-  border: solid rgb(23, 46, 148);
-  color: rgb(23, 46, 148) !important;
-  border-radius: 5px;
-  background-color: inherit;
-  border-width: 3px;
-  transition: all 175ms ease-in-out;
+
+.contact-us-button {
+    font-size: large;
+    font-weight: bolder;
+    border: 3px solid #00629b;
+    padding: 0.7rem 1.3rem;
+    color: #00629b;
+    border-radius: 5px;
+    background-color: inherit;
+    transition: all 175ms ease-in-out;
 }
 
-.learn-more-button:hover {
-  box-shadow: 0 0 0px 3px rgba(0,0,0,0.2);
-  color: white !important;
-  background-color: #0d47a1;
-  border-color: white;
+.our-team-button {
+    font-size: large;
+    font-weight: bolder;
+    border: 3px solid #00629b;
+    padding: 0.7rem 1.3rem;
+    color: white;
+    border-radius: 5px;
+    background-color: #00629b;
+    transition: all 175ms ease-in-out;
 }
 
-.learn-more-button >.button-text {
-  color: rgb(23, 46, 148) !important;
+.contact-us-button:hover {
+    box-shadow: 0 0 0 3px rgba(0,0,0,0.2);
+    color: white !important;
+    background-color: #0d47a1;
+    border-color: white;
 }
-.learn-more-button:hover > .button-text{
-  color: white !important;
+
+.our-team-button:hover {
+    box-shadow: 0 0 0 3px rgba(0,0,0,0.2);
+    color: #E6E6E6 !important;
+    background-color: #0d47a1;
+    border-color: white;
+}
+
+.contact-us-button >.button-text {
+    color: #00629b;
+}
+
+.contact-us-button:hover > .button-text {
+    color: white;
+}
+
+.cta-buttons-container {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    width: 100%;
 }
 
 
