--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -3,6 +3,7 @@
 html {
     min-height: 100%;
     height: auto;
+    overflow-x: hidden;
 }
 
 body {
